--- a/config.org
+++ b/config.org
@@ -757,6 +757,552 @@ Nothing to put here currently. Look into ~company-dabbrev-code~
 #+end_src
 
 
+#+begin_src emacs-lisp
+;; (after! mu4e
+;;   (defvar mu4e-reindex-request-file "/tmp/mu_reindex_now"
+;;     "Location of the reindex request, signaled by existance")
+;;   (defvar mu4e-reindex-request-min-seperation 5.0
+;;     "Don't refresh again until this many second have elapsed.
+;; Prevents a series of redisplays from being called (when set to an appropriate value)")
+
+;;   (defvar mu4e-reindex-request--file-watcher nil)
+;;   (defvar mu4e-reindex-request--file-just-deleted nil)
+;;   (defvar mu4e-reindex-request--last-time 0)
+
+;;   (defun mu4e-reindex-request--add-watcher ()
+;;     (setq mu4e-reindex-request--file-just-deleted nil)
+;;     (setq mu4e-reindex-request--file-watcher
+;;           (file-notify-add-watch mu4e-reindex-request-file
+;;                                  '(change)
+;;                                  #'mu4e-file-reindex-request)))
+
+;;   (defadvice! mu4e-stop-watching-for-reindex-request ()
+;;     :after #'mu4e~proc-kill
+;;     (if mu4e-reindex-request--file-watcher
+;;         (file-notify-rm-watch mu4e-reindex-request--file-watcher)))
+
+;;   (defadvice! mu4e-watch-for-reindex-request ()
+;;     :after #'mu4e~proc-start
+;;     (mu4e-stop-watching-for-reindex-request)
+;;     (when (file-exists-p mu4e-reindex-request-file)
+;;       (delete-file mu4e-reindex-request-file))
+;;     (mu4e-reindex-request--add-watcher))
+
+;;   (defun mu4e-file-reindex-request (event)
+;;     "Act based on the existance of `mu4e-reindex-request-file'"
+;;     (if mu4e-reindex-request--file-just-deleted
+;;         (mu4e-reindex-request--add-watcher)
+;;       (when (equal (nth 1 event) 'created)
+;;         (delete-file mu4e-reindex-request-file)
+;;         (setq mu4e-reindex-request--file-just-deleted t)
+;;         (mu4e-reindex-maybe t))))
+
+;;   (defun mu4e-reindex-maybe (&optional new-request)
+;;     "Run `mu4e~proc-index' if it's been more than
+;; `mu4e-reindex-request-min-seperation'seconds since the last request,"
+;;     (let ((time-since-last-request (- (float-time)
+;;                                       mu4e-reindex-request--last-time)))
+;;       (when new-request
+;;         (setq mu4e-reindex-request--last-time (float-time)))
+;;       (if (> time-since-last-request mu4e-reindex-request-min-seperation)
+;;           (mu4e~proc-index nil t)
+;;         (when new-request
+;;           (run-at-time (* 1.1 mu4e-reindex-request-min-seperation) nil
+;;                        #'mu4e-reindex-maybe))))))
+;; (with-eval-after-load 'mu4e
+;; (setq mu4e-context-policy 'pick-first)
+;; (setq mu4e-compose-context-policy 'always-ask)
+
+;; (setq mu4e-contexts
+;;       (list
+;;        (make-mu4e-context
+;;     :name "iinet"
+;;     :enter-func (lambda () (mu4e-message "Entering iinet context"))
+;;     :leave-func (lambda () (mu4e-message "Leaving iinet context"))
+;;     :match-func (lambda (msg)
+;;               (when msg
+;;             (mu4e-message-contact-field-matches
+;;              msg '(:from :to :cc :bcc) "dbadams@iinet.net.au")))
+;;     :vars '((user-mail-address . "dbadams@iinet.net.au")
+;;         (user-full-name . "David Adams")
+;;         (mu4e-sent-folder . "/iinet/Sent")
+;;         (mu4e-drafts-folder . "/iinet/Drafts")
+;;         (mu4e-trash-folder . "/iinet/Trash")
+;;         (mu4e-refile-folder . "/iinet/Archives")
+;;         ;; (smtpmail-queue-dir . "~/.email/gmail/queue/cur")
+;;         (smtpmail-smtp-user . "dbadams@iinet.net.au")
+;;         (smtpmail-starttls-credentials . (("dbadams@iinet.net.au" 587 nil nil)))
+;;         (smtpmail-auth-credentials . (expand-file-name "~/.authinfo.gpg"))
+;;         (smtpmail-default-smtp-server . "smtp.iinet.net.au")
+;;         (smtpmail-smtp-server . "smtp.iinet.net.au")
+;;         (smtpmail-smtp-service . 587)
+;;         (mu4e-sent-messages-behavior . sent)
+;;         ;; (mu4e-maildir-shortcuts . ( ("/work/INBOX"    . ?i)
+;;         ;;                 ("/work/Sent"     . ?s)
+;;         ;;                 ("/work/Trash"    . ?t)
+;;         ;;                 ("/work/Archives" . ?a)
+;;         ;;                 ("/work/Drafts"   . ?d)
+;;         ;;                 ))
+;;         ))
+
+;;        (make-mu4e-context
+;;     :name "gmail"
+;;     :enter-func (lambda () (mu4e-message "Entering gmail context"))
+;;     :leave-func (lambda () (mu4e-message "Leaving gmail context"))
+;;     :match-func (lambda (msg)
+;;               (when msg
+;;             (mu4e-message-contact-field-matches
+;;              msg '(:from :to :cc :bcc) "davidbadams110@gmail.com")))
+;;     :vars '((user-mail-address . "davidbadams110@gmail.com")
+;;         (user-full-name . "David Adams")
+;;                   (mu4e-drafts-folder  . "/dagmail/[Gmail]/Drafts")
+;;                   (mu4e-sent-folder  . "/dagmail/[Gmail]/Sent Mail")
+;;                   (mu4e-refile-folder  . "/dagmail/[Gmail]/All Mail")
+;;                   (mu4e-trash-folder  . "/dagmail/[Gmail]/Trash")
+;;         ;; (smtpmail-queue-dir . "~/.email/gmail/queue/cur")
+;;         (smtpmail-smtp-user . "davidbadams110@gmail.com")
+;;         (smtpmail-starttls-credentials . (("smtp.gmail.com" 587 nil nil)))
+;;         (smtpmail-auth-credentials . (expand-file-name "~/.authinfo.gpg"))
+;;         (smtpmail-default-smtp-server . "smtp.gmail.com")
+;;         (smtpmail-smtp-server . "smtp.gmail.com")
+;;         (smtpmail-smtp-service . 587)
+;;         (mu4e-sent-messages-behavior . delete)
+;;         ;; (mu4e-maildir-shortcuts . ( ("/gmail/INBOX"                        . ?i)
+;;         ;;                 ("/gmail/[Gmail]/Messages envoy&AOk-s" . ?s)
+;;         ;;                 ("/gmail/[Gmail]/Corbeille"            . ?t)
+;;         ;;                 ("/gmail/[Gmail]/Tous les messages"    . ?a)
+;;         ;;                 ("/gmail/[Gmail]/Brouillons"           . ?d)
+;;         ;;                 ))
+;;         )))))
+#+end_src
+
+#+begin_src emacs-lisp
+;; (setq sendmail-program "/usr/bin/msmtp"
+;;       send-mail-function #'smtpmail-send-it
+;;       message-sendmail-f-is-evil t
+;;       message-sendmail-extra-arguments '("--read-envelope-from"); , "--read-recipients")
+;;       message-send-mail-function #'message-send-mail-with-sendmail)
+#+end_src
+
+#+begin_src python :tangle misc/mbsync-imapnotify.py :shebang "#!/usr/bin/env python3"
+# from pathlib import Path
+# import json
+# import re
+# import shutil
+# import subprocess
+# import sys
+# import fnmatch
+
+# mbsyncFile = Path("~/.mbsyncrc").expanduser()
+
+# imapnotifyConfigFolder = Path("~/.config/imapnotify/").expanduser()
+# imapnotifyConfigFolder.mkdir(exist_ok=True)
+# imapnotifyConfigFilename = "notify.conf"
+
+# imapnotifyDefault = {
+#     "host": "",
+#     "port": 993,
+#     "tls": True,
+#     "tlsOptions": {"rejectUnauthorized": True},
+#     "onNewMail": "",
+#     "onNewMailPost": "if mu index --lazy-check; then test -f /tmp/mu_reindex_now && rm /tmp/mu_reindex_now; else touch /tmp/mu_reindex_now; fi",
+# }
+
+
+# def stripQuotes(string):
+#     if string[0] == '"' and string[-1] == '"':
+#         return string[1:-1].replace('\\"', '"')
+
+
+# mbsyncInotifyMapping = {
+#     "Host": (str, "host"),
+#     "Port": (int, "port"),
+#     "User": (str, "username"),
+#     "Password": (str, "password"),
+#     "PassCmd": (stripQuotes, "passwordCmd"),
+#     "Patterns": (str, "_patterns"),
+# }
+
+# oldAccounts = [d.name for d in imapnotifyConfigFolder.iterdir() if d.is_dir()]
+
+# currentAccount = ""
+# currentAccountData = {}
+
+# successfulAdditions = []
+
+
+# def processLine(line):
+#     newAcc = re.match(r"^IMAPAccount ([^#]+)", line)
+
+#     linecontent = re.sub(r"(^|[^\\])#.*", "", line).split(" ", 1)
+#     if len(linecontent) != 2:
+#         return
+
+#     parameter, value = linecontent
+
+#     if parameter == "IMAPAccount":
+#         if currentAccountNumber > 0:
+#             finaliseAccount()
+#         newAccount(value)
+#     elif parameter in mbsyncInotifyMapping.keys():
+#         parser, key = mbsyncInotifyMapping[parameter]
+#         currentAccountData[key] = parser(value)
+#     elif parameter == "Channel":
+#         currentAccountData["onNewMail"] = f"mbsync --pull --new {value}:'%s'"
+
+
+# def newAccount(name):
+#     global currentAccountNumber
+#     global currentAccount
+#     global currentAccountData
+#     currentAccountNumber += 1
+#     currentAccount = name
+#     currentAccountData = {}
+#     print(f"\n\033[1;32m{currentAccountNumber}\033[0;32m - {name}\033[0;37m")
+
+
+# def accountToFoldername(name):
+#     return re.sub(r"[^A-Za-z0-9]", "", name)
+
+
+# def finaliseAccount():
+#     if currentAccountNumber == 0:
+#         return
+
+#     global currentAccountData
+#     try:
+#         currentAccountData["boxes"] = getMailBoxes(currentAccount)
+#     except subprocess.CalledProcessError as e:
+#         print(
+#             f"\033[1;31mError:\033[0;31m failed to fetch mailboxes (skipping): "
+#             + f"`{' '.join(e.cmd)}' returned code {e.returncode}\033[0;37m"
+#         )
+#         return
+#     except subprocess.TimeoutExpired as e:
+#         print(
+#             f"\033[1;31mError:\033[0;31m failed to fetch mailboxes (skipping): "
+#             + f"`{' '.join(e.cmd)}' timed out after {e.timeout:.2f} seconds\033[0;37m"
+#         )
+#         return
+
+#     if "_patterns" in currentAccountData:
+#         currentAccountData["boxes"] = applyPatternFilter(
+#             currentAccountData["_patterns"], currentAccountData["boxes"]
+#         )
+
+#     # strip not-to-be-exported data
+#     currentAccountData = {
+#         k: currentAccountData[k] for k in currentAccountData if k[0] != "_"
+#     }
+
+#     parametersSet = currentAccountData.keys()
+#     currentAccountData = {**imapnotifyDefault, **currentAccountData}
+#     for key, val in currentAccountData.items():
+#         valColor = "\033[0;33m" if key in parametersSet else "\033[0;37m"
+#         print(f"  \033[1;37m{key:<13} {valColor}{val}\033[0;37m")
+
+#     if (
+#             len(currentAccountData["boxes"]) > 15
+#             and "@gmail.com" in currentAccountData["username"]
+#     ):
+#         print(
+#             "  \033[1;31mWarning:\033[0;31m Gmail raises an error when more than"
+#             + "\033[1;31m15\033[0;31m simultanious connections are attempted."
+#             + "\n           You are attempting to monitor "
+#             + f"\033[1;31m{len(currentAccountData['boxes'])}\033[0;31m mailboxes.\033[0;37m"
+#         )
+
+#     configFile = (
+#         imapnotifyConfigFolder
+#         / accountToFoldername(currentAccount)
+#         / imapnotifyConfigFilename
+#     )
+#     configFile.parent.mkdir(exist_ok=True)
+
+#     json.dump(currentAccountData, open(configFile, "w"), indent=2)
+#     print(f" \033[0;35mConfig generated and saved to {configFile}\033[0;37m")
+
+#     global successfulAdditions
+#     successfulAdditions.append(accountToFoldername(currentAccount))
+
+
+# def getMailBoxes(account):
+#     boxes = subprocess.run(
+#         ["mbsync", "--list", account], check=True, stdout=subprocess.PIPE, timeout=10.0
+#     )
+#     return boxes.stdout.decode("utf-8").strip().split("\n")
+
+
+# def applyPatternFilter(pattern, mailboxes):
+#     patternRegexs = getPatternRegexes(pattern)
+#     return [m for m in mailboxes if testPatternRegexs(patternRegexs, m)]
+
+
+# def getPatternRegexes(pattern):
+#     def addGlob(b):
+#         blobs.append(b.replace('\\"', '"'))
+#         return ""
+
+#     blobs = []
+#     pattern = re.sub(r' ?"([^"]+)"', lambda m: addGlob(m.groups()[0]), pattern)
+#     blobs.extend(pattern.split(" "))
+#     blobs = [
+#         (-1, fnmatch.translate(b[1::])) if b[0] == "!" else (1, fnmatch.translate(b))
+#         for b in blobs
+#     ]
+#     return blobs
+
+
+# def testPatternRegexs(regexCond, case):
+#     for factor, regex in regexCond:
+#         if factor * bool(re.match(regex, case)) < 0:
+#             return False
+#     return True
+
+
+# def processSystemdServices():
+#     keptAccounts = [acc for acc in successfulAdditions if acc in oldAccounts]
+#     freshAccounts = [acc for acc in successfulAdditions if acc not in oldAccounts]
+#     staleAccounts = [acc for acc in oldAccounts if acc not in successfulAdditions]
+
+#     if keptAccounts:
+#         print(f"\033[1;34m{len(keptAccounts)}\033[0;34m kept accounts:\033[0;37m")
+#         restartAccountSystemdServices(keptAccounts)
+
+#     if freshAccounts:
+#         print(f"\033[1;32m{len(freshAccounts)}\033[0;32m new accounts:\033[0;37m")
+#         enableAccountSystemdServices(freshAccounts)
+#     else:
+#         print(f"\033[0;32mNo new accounts.\033[0;37m")
+
+#     notActuallyEnabledAccounts = [
+#         acc for acc in successfulAdditions if not getAccountServiceState(acc)["enabled"]
+#     ]
+#     if notActuallyEnabledAccounts:
+#         print(
+#             f"\033[1;32m{len(notActuallyEnabledAccounts)}\033[0;32m accounts need re-enabling:\033[0;37m"
+#         )
+#         enableAccountSystemdServices(notActuallyEnabledAccounts)
+
+#     if staleAccounts:
+#         print(f"\033[1;33m{len(staleAccounts)}\033[0;33m removed accounts:\033[0;37m")
+#         disableAccountSystemdServices(staleAccounts)
+#     else:
+#         print(f"\033[0;33mNo removed accounts.\033[0;37m")
+
+
+# def enableAccountSystemdServices(accounts):
+#     for account in accounts:
+#         print(f" \033[0;32m - \033[1;37m{account:<18}", end="\033[0;37m", flush=True)
+#         if setSystemdServiceState(
+#                 "enable", f"goimapnotify@{accountToFoldername(account)}.service"
+#         ):
+#             print("\033[1;32m enabled")
+
+
+# def disableAccountSystemdServices(accounts):
+#     for account in accounts:
+#         print(f" \033[0;33m - \033[1;37m{account:<18}", end="\033[0;37m", flush=True)
+#         if setSystemdServiceState(
+#                 "disable", f"goimapnotify@{accountToFoldername(account)}.service"
+#         ):
+#             print("\033[1;33m disabled")
+
+
+# def restartAccountSystemdServices(accounts):
+#     for account in accounts:
+#         print(f" \033[0;34m - \033[1;37m{account:<18}", end="\033[0;37m", flush=True)
+#         if setSystemdServiceState(
+#                 "restart", f"goimapnotify@{accountToFoldername(account)}.service"
+#         ):
+#             print("\033[1;34m restarted")
+
+
+# def setSystemdServiceState(state, service):
+#     try:
+#         enabler = subprocess.run(
+#             ["systemctl", "--user", state, service, "--now"],
+#             check=True,
+#             stderr=subprocess.DEVNULL,
+#             timeout=5.0,
+#         )
+#         return True
+#     except subprocess.CalledProcessError as e:
+#         print(
+#             f" \033[1;31mfailed\033[0;31m to {state}, `{' '.join(e.cmd)}'"
+#             + f"returned code {e.returncode}\033[0;37m"
+#         )
+#     except subprocess.TimeoutExpired as e:
+#         print(f" \033[1;31mtimed out after {e.timeout:.2f} seconds\033[0;37m")
+#         return False
+
+
+# def getAccountServiceState(account):
+#     return {
+#         state: bool(
+#             1
+#             - subprocess.run(
+#                 [
+#                     "systemctl",
+#                     "--user",
+#                     f"is-{state}",
+#                     "--quiet",
+#                     f"goimapnotify@{accountToFoldername(account)}.service",
+#                 ],
+#                 stderr=subprocess.DEVNULL,
+#             ).returncode
+#         )
+#         for state in ("enabled", "active", "failing")
+#     }
+
+
+# def getAccountServiceStates(accounts):
+#     for account in accounts:
+#         enabled, active, failing = getAccountServiceState(account).values()
+#         print(f"  - \033[1;37m{account:<18}\033[0;37m ", end="", flush=True)
+#         if not enabled:
+#             print("\033[1;33mdisabled\033[0;37m")
+#         elif active:
+#             print("\033[1;32mactive\033[0;37m")
+#         elif failing:
+#             print("\033[1;31mfailing\033[0;37m")
+#         else:
+#             print("\033[1;35min an unrecognised state\033[0;37m")
+
+
+# if len(sys.argv) > 1:
+#     if sys.argv[1]   in ["-e", "--enable"]:
+#         enableAccountSystemdServices(oldAccounts)
+#         exit()
+#     elif sys.argv[1] in ["-d", "--disable"]:
+#         disableAccountSystemdServices(oldAccounts)
+#         exit()
+#     elif sys.argv[1] in ["-r", "--restart"]:
+#         restartAccountSystemdServices(oldAccounts)
+#         exit()
+#     elif sys.argv[1] in ["-s", "--status"]:
+#         getAccountServiceStates(oldAccounts)
+#         exit()
+#     elif sys.argv[1] in ["-h", "--help"]:
+#         print("""\033[1;37mMbsync to IMAP Notify config generator.\033[0;37m
+
+# Usage: mbsync-imapnotify [options]
+
+# Options:
+#     -e, --enable       enable all services
+#     -d, --disable      disable all services
+#     -r, --restart      restart all services
+#     -s, --status       fetch the status for all services
+#     -h, --help         show this help
+# """, end='')
+#         exit()
+#     else:
+#         print(f"\033[0;31mFlag {sys.argv[1]} not recognised, try --help\033[0;37m")
+#         exit()
+
+
+# mbsyncData = open(mbsyncFile, "r").read()
+
+# currentAccountNumber = 0
+
+# totalAccounts = len(re.findall(r"^IMAPAccount", mbsyncData, re.M))
+
+
+# def main():
+#     print("\033[1;34m:: MbSync to Go IMAP notify config file creator ::\033[0;37m")
+
+#     shutil.rmtree(imapnotifyConfigFolder)
+#     imapnotifyConfigFolder.mkdir(exist_ok=False)
+#     print("\033[1;30mImap Notify config dir purged\033[0;37m")
+
+#     print(f"Identified \033[1;32m{totalAccounts}\033[0;32m accounts.\033[0;37m")
+
+#     for line in mbsyncData.split("\n"):
+#         processLine(line)
+
+#     finaliseAccount()
+
+#     print(
+#         f"\nConfig files generated for \033[1;36m{len(successfulAdditions)}\033[0;36m"
+#         + f" out of \033[1;36m{totalAccounts}\033[0;37m accounts.\n"
+#     )
+
+#     processSystemdServices()
+
+
+# if __name__ == "__main__":
+#     main()
+#+end_src
+
+#+begin_src systemd :no-tangle ~/.config/systemd/user/goimapnotify@.service
+# [Unit]
+# Description=IMAP notifier using IDLE, golang version.
+# ConditionPathExists=%h/.config/imapnotify/%I/notify.conf
+# After=network.target
+
+# [Service]
+# ExecStart=%h/.local/bin/goimapnotify -conf %h/.config/imapnotify/%I/notify.conf
+# Restart=always
+# RestartSec=30
+
+# [Install]
+# WantedBy=default.target
+#+end_src
+
+#+begin_src systemd :tangle (if (executable-find "mu") "~/.config/systemd/user/mbsync.timer" "no")
+# [Unit]
+# Description=call mbsync on all accounts every 5 minutes
+# ConditionPathExists=%h/.mbsyncrc
+
+# [Timer]
+# OnBootSec=5m
+# OnUnitInactiveSec=5m
+
+# [Install]
+# WantedBy=default.target
+#+end_src
+
+#+begin_src systemd :tangle (if (executable-find "mu") "~/.config/systemd/user/mbsync.service" "no")
+# [Unit]
+# Description=mbsync service, sync all mail
+# Documentation=man:mbsync(1)
+# ConditionPathExists=%h/.mbsyncrc
+
+# [Service]
+# Type=oneshot
+# ExecStart=/usr/bin/mbsync -c %h/.mbsyncrc --all
+
+# [Install]
+# WantedBy=mail.target
+#+end_src
+#+begin_src emacs-lisp
+
+;; (setq mu4e-headers-fields
+;;       '((:flags . 6)
+;;         (:account-stripe . 2)
+;;         (:from-or-to . 25)
+;;         (:folder . 10)
+;;         (:recipnum . 2)
+;;         (:subject . 80)
+;;         (:human-date . 8))
+;;       +mu4e-min-header-frame-width 142
+;;       mu4e-headers-date-format "%d/%m/%y"
+;;       mu4e-headers-time-format "?? %H:%M"
+;;       mu4e-headers-results-limit 1000
+;;       mu4e-index-cleanup t)
+
+;; (add-to-list 'mu4e-bookmarks
+;;              '(:name "Yesterday's messages" :query "date:2d..1d" :key ?y) t)
+
+;; (defvar +mu4e-header--folder-colors nil)
+;; (appendq! mu4e-header-info-custom
+;;           '((:folder .
+;;              (:name "Folder" :shortname "Folder" :help "Lowest level folder" :function
+;;               (lambda (msg)
+;;                 (+mu4e-colorize-str
+;;                  (replace-regexp-in-string "\\`.*/" "" (mu4e-message-field msg :maildir))
+;;                  '+mu4e-header--folder-colors))))))
+#+end_src
 
 
 
@@ -775,6 +1321,14 @@ Nothing to put here currently. Look into ~company-dabbrev-code~
 			 :files ("gitignore-mode.el")))
 
 (unpin! magit forge)
+
+
+(package! systemd :pin "b6ae63a236605b1c5e1069f7d3afe06ae32a7bae")
+
+(use-package! systemd
+  :defer t)
+
+
 ;; To install SOME-PACKAGE from MELPA, ELPA or emacsmirror:
 ;(package! some-package)
 
