--- a/config.org
+++ b/config.org
@@ -1,7 +1,23 @@
 #+title: Doom Emacs Configuration
 #+author: Dadams
-# #+property: header-args:emacs-lisp :tangle yes :comments link
-# #+property: header-args:elisp :exports code
+
+* Table of Contents :TOC:
+- [[#preamble][Preamble]]
+- [[#the-simple-stuff][The simple stuff]]
+  - [[#personal-info][Personal info]]
+  - [[#default-settings][Default settings]]
+  -  [[#doom-config][Doom Config]]
+- [[#packages][Packages]]
+  - [[#loading-instructions][Loading instructions]]
+  - [[#convenience][Convenience]]
+  - [[#tools][Tools]]
+  - [[#visuals][Visuals]]
+  - [[#file-types][File Types]]
+- [[#applications][Applications]]
+  - [[#mail][Mail]]
+- [[#languages][Languages]]
+  - [[#python][Python]]
+-   [[#the-rest][The rest]]
 
 * Preamble
 
@@ -294,7 +310,7 @@ tty               ; improve the terminal Emacs experience
 ;;agda              ; types of types of types of types...
 ;;beancount         ; mind the GAAP
 (cc +lsp)                ; C > C++ == 1
-;;clojure           ; java with a lisp
+clojure           ; java with a lisp
 ;;common-lisp       ; if you've seen one lisp, you've seen them all
 ;;coq               ; proofs-as-programs
 ;;crystal           ; ruby at the speed of c
@@ -672,6 +688,35 @@ Should I switch to higher resolution displays this will likely become system dep
 #+end_src
 #TODO: make this work with wayland
 
+
+***** Dashboard quick actions
+
+There are only a few things I do on the dashboard. So why not make them quicker and save keystrokes
+
+#+begin_src emacs-lisp
+(defun +doom-dashboard-setup-modified-keymap ()
+  (setq +doom-dashboard-mode-map (make-sparse-keymap))
+  (map! :map +doom-dashboard-mode-map
+        :desc "Find file" :ne "f" #'find-file
+        :desc "Recent files" :ne "r" #'consult-recent-file
+        :desc "Config dir" :ne "C" #'doom/open-private-config
+        :desc "Open config.org" :ne "c" (cmd! (find-file (expand-file-name "config.org" doom-private-dir)))
+        :desc "Open dotfile" :ne "." (cmd! (doom-project-find-file "~/.config/"))
+        :desc "Notes (roam)" :ne "n" #'org-roam-node-find
+        :desc "Switch buffer" :ne "b" #'+vertico/switch-workspace-buffer
+        :desc "Switch buffers (all)" :ne "B" #'consult-buffer
+        :desc "IBuffer" :ne "i" #'ibuffer
+        :desc "Open Project" :ne "p" #'projectile-switch-project
+        :desc "Open Mail" :ne "m" #'mu4e
+        :desc "Set theme" :ne "t" #'consult-theme
+        :desc "Quit" :ne "Q" #'save-buffers-kill-terminal
+        :desc "Show keybindings" :ne "h" (cmd! (which-key-show-keymap '+doom-dashboard-mode-map))))
+
+(add-transient-hook! #'+doom-dashboard-mode (+doom-dashboard-setup-modified-keymap))
+(add-transient-hook! #'+doom-dashboard-mode :append (+doom-dashboard-setup-modified-keymap))
+(add-hook! 'doom-init-ui-hook :append (+doom-dashboard-setup-modified-keymap))
+#+end_src
+
 * Packages
 ** Loading instructions
 :PROPERTIES:
@@ -754,7 +799,7 @@ all the defaults excepting it.
 Ligature's are still an issue for me. Especially python. So I have done a bit of a blanket ignore
 till I figure out what I want
 #+begin_src emacs-lisp
-(setq +ligatures-extras-in-modes'(elisp-mode org-mode))
+(setq +ligatures-extras-in-modes '(elisp-mode org-mode))
 (setq +ligatures-in-modes '(not special-mode comint-mode eshell-mode term-mode vterm-mode Info-mode python-mode))
 #+end_src
 
@@ -773,8 +818,9 @@ I like to use tmux inside vterm and use vim bindings for navigating panes and wi
 This simply disables the global =C-h= for help.
 #+begin_src emacs-lisp
 (map! :after vterm
-      :map vterm-mode-map
-      "C-h" #'vterm-send-C-h)
+        :map vterm-mode-map
+        "C-a" #'vterm-send-C-a
+        "C-h" #'vterm-send-C-h)
 #+end_src
 
 ** Tools
@@ -805,7 +851,6 @@ Another gem from Tec's config is to make this look better
 (setq eros-eval-result-prefix "⟹ ") ; default =>
 #+end_src
 
-
 *** Evil
 
 #+begin_quote
@@ -822,13 +867,34 @@ However everyone has some personal preferences.
 
 *** Magit
 
+automated commit templates seem nice to me
+#+begin_src emacs-lisp
+(defvar +magit-project-commit-templates-alist nil
+  "Alist of toplevel dirs and template strings/functions.")
+(after! magit
+  (defun +magit-fill-in-commit-template ()
+    "Insert template from `+magit-fill-in-commit-template' if applicable."
+    (when-let ((template (and (save-excursion (goto-char (point-min)) (string-match-p "\\`\\s-*$" (thing-at-point 'line)))
+                              (cdr (assoc (file-name-base (directory-file-name (magit-toplevel)))
+                                          +magit-project-commit-templates-alist)))))
+      (goto-char (point-min))
+      (insert (if (stringp template) template (funcall template)))
+      (goto-char (point-min))
+      (end-of-line)))
+  (add-hook 'git-commit-setup-hook #'+magit-fill-in-commit-template 90)
+                )
+
+(after! magit
+(add-to-list '+magit-project-commit-templates-alist (cons "first" (lambda () (insert (magit-get-current-branch) ": "))))
+  )
+#+end_src
+
 TODO: handle automated setup
 I have yet to find something I want to change about magit. Maybe magit delta can be put to use.
 #+begin_src emacs-lisp
 
 ;; (after! magit
 ;;   (magit-delta-mode +1))
-
 
 #+end_src
 
@@ -876,7 +942,6 @@ Having ~Ispell~ Enabled is really useful.
 
 Nothing to put here currently. Look into ~company-dabbrev-code~
 
-
 *** Projectile
 
 because it faster
@@ -891,6 +956,15 @@ because the default bindings are kinda dumb so everything is now =SPC c x=
 (map! :leader
 (:prefix-map ("c" . "code")
 "x" flycheck-command-map)))
+#+end_src
+*** Ispell
+
+Nothing too much here to worry about. Should probably enable in more places
+*** YASnippet
+
+nested snippets are good so:
+#+begin_src emacs-lisp
+(setq yas-triggers-in-field t)
 #+end_src
 
 ** Visuals
@@ -924,7 +998,6 @@ Themes are sometimes hard to match in terminals especially given settings. This 
 # #+begin_src shell :eval no :tangle (if (executable-find "wal") "no" "setup.sh")
 # sudo python3 -m pip install pywal
 # #+end_src
-
 Theme magic selects 8 reasonable colours to use from font faces and other data.
 Unfortunately those 8 colours are used for both normal and light variants.
 Fortunately =doom-themes= makes things more easy as we can use the colour utils
@@ -953,6 +1026,28 @@ to generate sensible variations.
      (doom-blend 'base8 'constants 0.1)
      (doom-blend 'base8 'functions 0.1)
      (face-attribute 'default :foreground))))
+#+end_src
+*** Emojify
+
+Sometimes the emoji is used over the actual character when we really want the actual character. Espeically in org mode and vterm.
+#+begin_src emacs-lisp
+(defvar emojify-disabled-emojis
+  '(;; Org
+    "◼" "☑" "☸" "⚙" "⏩" "⏪" "⬆" "⬇" "❓"
+    ;; Terminal powerline
+    "✔"
+    ;; Box drawing
+    "▶" "◀"
+    ;; I just want to see this as text
+    "©" "™")
+  "Characters that should never be affected by `emojify-mode'.")
+
+
+(defadvice! emojify-delete-from-data ()
+  "Ensure `emojify-disabled-emojis' don't appear in `emojify-emojis'."
+  :after #'emojify-set-emoji-data
+  (dolist (emoji emojify-disabled-emojis)
+    (remhash emoji emojify-emojis)))
 #+end_src
 
 ** File Types
@@ -1500,7 +1595,7 @@ ConditionPathExists=%h/.config/imapnotify/%I/notify.conf
 After=network.target
 
 [Service]
-ExecStart=%h/.local/bin/goimapnotify -conf %h/.config/imapnotify/%I/notify.conf
+ExecStart=/usr/bin/goimapnotify -conf %h/.config/imapnotify/%I/notify.conf
 Restart=always
 RestartSec=30
 
@@ -1541,6 +1636,29 @@ Enabling (and starting) this is as simple as
 #+begin_src shell :tangle (if (or (not (executable-find "mu")) (string= "enabled\n" (shell-command-to-string "systemctl --user is-enabled mbsync.timer"))) "no" "setup.sh")
 systemctl --user enable mbsync.timer --now
 #+end_src
+
+
+#TODO: put something in setup script to deal with this and put in right place
+
+its a bit buggy tbh
+#+begin_src systemd :tangle (if (executable-find "mu") "~/.config/systemd/user/mbsync-resume.service" "no")
+[Unit]
+Description=sync mail after resume
+Documentation=man:mbsync(1)
+Requires=network-online.target
+After=network-online.target suspend.target
+
+[Service]
+Type=simple
+# Environment="HOME=/home/dadams"
+ExecStartPre=/bin/sleep 10
+User=dadams
+ExecStart=/usr/bin/mbsync -c /home/dadams/.mbsyncrc --all
+
+[Install]
+WantedBy=suspend.target
+#+end_src
+
 *** Indexing
 *** Sending
 *** Mu4e
@@ -1558,9 +1676,9 @@ This is here because of some weird ass property drawer errors
 :END:
 Browser good for rendering not good for email applications.
 
-
 To account for the increase width of each flag character, and make perform a
 few more visual tweaks, we'll tweak the headers a bit
+
 #+begin_src emacs-lisp
 (setq mu4e-headers-fields
       '((:flags . 6)
@@ -1591,6 +1709,14 @@ few more visual tweaks, we'll tweak the headers a bit
 We'll also use a nicer alert icon
 #+begin_src emacs-lisp
 ;; (setq mu4e-alert-icon "/usr/share/icons/Papirus/64x64/apps/evolution.svg")
+#+end_src
+***** Contexts
+
+These be important
+#+begin_src emacs-lisp
+(setq mu4e-context-policy 'pick-first)
+(setq mu4e-compose-context-policy 'always-ask)
+(load! "private/email.el")
 #+end_src
 **** Sending Mail
 Let's send emails too.
@@ -1650,19 +1776,22 @@ It would also be nice to change the name pre-filled in =From:= when drafting.
 #+end_src
 
 We can also use this a signature,
+
 #+begin_src emacs-lisp
 (setq message-signature mu4e-from-name)
 #+end_src
-**** Contexts
 
-These be important
-#+begin_src emacs-lisp
-(setq mu4e-context-policy 'pick-first)
-(setq mu4e-compose-context-policy 'always-ask)
-(load! "private/email.el")
-#+end_src
 
 * Languages
+
+** Python
+
+#+begin_src emacs-lisp
+(after! conda
+  (setq conda-anaconda-home (expand-file-name "/opt/miniconda3/")
+        conda-env-home-directory (expand-file-name "~/.conda"))
+  )
+#+end_src
 
 *   The rest
 
@@ -1675,14 +1804,6 @@ These be important
 ;; (setq lsp-idle-delay 0.500)
 ;; (setq shell-file-name "bash")
 ;; (setq shell-command-switch "-ic")
-;; (setq conda-anaconda-home (expand-file-name "/opt/miniconda3/") )
-;; (setq
-;;   conda-env-home-directory (expand-file-name "~/.conda/")
-;;   conda-env-subdirectory "envs")
-(after! conda
-  (setq conda-anaconda-home (expand-file-name "/opt/miniconda3/")
-        conda-env-home-directory (expand-file-name "~/.conda"))
-  )
   (cl-flet* ((make-help-button (text help-echo)
                                (with-temp-buffer
                                  (insert-text-button text
@@ -1701,6 +1822,9 @@ These be important
           mu4e-headers-full-label
           (make-help-button-cons "F" (concat " " (all-the-icons-material "disc_full"))
                                  "Search is full!")))
+
+
+
 #+end_src
 
 
