--- a/config.org
+++ b/config.org
@@ -7,6 +7,7 @@
   - [[#personal-info][Personal info]]
   - [[#default-settings][Default settings]]
   -  [[#doom-config][Doom Config]]
+  - [[#other-stuff][Other stuff]]
 - [[#packages][Packages]]
   - [[#loading-instructions][Loading instructions]]
   - [[#convenience][Convenience]]
@@ -261,6 +262,7 @@ vterm             ; the best terminal emulation in Emacs
 **** Checkers
 
 not much to be said. spell-fu seems good but the interfaces are not as nice
+grammar would be much better if it offered suggestions on how to improve things (well specifically writegood mode)
 #+name: doom-checkers
 #+begin_src emacs-lisp
 syntax              ; tasing you for every semicolon you forget
@@ -489,16 +491,16 @@ t)))
 
 
 
-**** Other stuff
+** Other stuff
 
-***** Line numbers
+*** Line numbers
 
 I literally cannot function without relative lines numbers
 #+begin_src emacs-lisp
 (setq display-line-numbers-type 'relative)
 #+end_src
 
-***** Buffer names
+*** Buffer names
 
 Why not take advantage of icons for the default buffer
 #+begin_src emacs-lisp
@@ -508,7 +510,7 @@ Why not take advantage of icons for the default buffer
 #+end_src
 
 
-***** Async config tangle
+*** Async config tangle
 
 # TODO: update this
 courtesy of Tec once again, as literate config files get big and tangling is blocking by default
@@ -576,7 +578,7 @@ having a simple async version seems like a good idea
 
 
 
-***** Splash screen
+*** Splash screen
 
 re-occurring pain point as this is the first thing that you see when you open emacs. Finding both the right image at the right size and colour is difficult.
 At the moment it is simple but I have bigger plans
@@ -675,8 +677,56 @@ fancy-splash-sizes)))
 (add-hook 'doom-load-theme-hook #'set-appropriate-splash)
  #+end_src
 
+*** Systemd daemon
 
-***** Full screen
+for a lot of things it makes sense to run emacs as a daemon. Especially mail.
+#+name: emacsclient service
+#+begin_src systemd :tangle ~/.config/systemd/user/emacs.service :mkdirp yes
+[Unit]
+Description=Emacs server daemon
+Documentation=info:emacs man:emacs(1) https://gnu.org/software/emacs/
+
+[Service]
+Type=forking
+ExecStart=sh -c 'emacs --daemon && emacsclient -c --eval "(delete-frame)"'
+ExecStop=/usr/bin/emacsclient --no-wait --eval "(progn (setq kill-emacs-hook nil) (kill emacs))"
+Restart=on-failure
+
+[Install]
+WantedBy=default.target
+#+end_src
+
+which is then enabled by
+#+begin_src shell :tangle (if (string= "enabled\n" (shell-command-to-string "systemctl --user is-enabled emacs.service")) "no" "setup.sh")
+systemctl --user enable emacs.service
+#+end_src
+
+So to enable =mu4e= when actually running the daemon. Unfortunate that =circle= also cannot be started at this time.
+Also make sure to switch to the dashboard.
+
+#+name: daemon initialisation
+#+begin_src emacs-lisp
+(defun greedily-do-daemon-setup ()
+  (require 'org)
+  (when (require 'mu4e nil t)
+    (setq mu4e-confirm-quit t)
+    (setq +mu4e-lock-greedy t)
+    (setq +mu4e-lock-relaxed t)
+    (+mu4e-lock-add-watcher)
+    (when (+mu4e-lock-available t)
+      (mu4e~start)))
+  (when (require 'elfeed nil t)
+    (run-at-time nil (* 8 60 60) #'elfeed-update)))
+
+(when (daemonp)
+  (add-hook 'emacs-startup-hook #'greedily-do-daemon-setup)
+  (add-hook! 'server-after-make-frame-hook
+    (unless (string-match-p "\\*draft\\|\\*stdin\\|emacs-everywhere" (buffer-name))
+      (switch-to-buffer +doom-dashboard-name))))
+#+end_src
+
+
+*** Full screen
 
 The majority of screens that I work on are 1080p so having emacs full screen by default is nice for them.
 Should I switch to higher resolution displays this will likely become system dependent.
@@ -689,7 +739,7 @@ Should I switch to higher resolution displays this will likely become system dep
 #TODO: make this work with wayland
 
 
-***** Dashboard quick actions
+*** Dashboard quick actions
 
 There are only a few things I do on the dashboard. So why not make them quicker and save keystrokes
 
@@ -947,6 +997,46 @@ Nothing to put here currently. Look into ~company-dabbrev-code~
 because it faster
 #+begin_src emacs-lisp
 (setq projectile-indexing-method 'native)
+#+end_src
+*** Smerge
+The default keybindings are not the best really, and could use some improvement.
+Especially in keeping all changes.
+#+begin_src emacs-lisp
+(defun smerge-repeatedly ()
+  "Perform smerge actions again and again"
+  (interactive)
+  (smerge-mode 1)
+  (smerge-transient))
+(after! transient
+  (transient-define-prefix smerge-transient ()
+    [["Move"
+      ("n" "next" (lambda () (interactive) (ignore-errors (smerge-next)) (smerge-repeatedly)))
+      ("p" "previous" (lambda () (interactive) (ignore-errors (smerge-prev)) (smerge-repeatedly)))]
+     ["Keep"
+      ("b" "base" (lambda () (interactive) (ignore-errors (smerge-keep-base)) (smerge-repeatedly)))
+      ("u" "upper" (lambda () (interactive) (ignore-errors (smerge-keep-upper)) (smerge-repeatedly)))
+      ("l" "lower" (lambda () (interactive) (ignore-errors (smerge-keep-lower)) (smerge-repeatedly)))
+      ("a" "all" (lambda () (interactive) (ignore-errors (smerge-keep-all)) (smerge-repeatedly)))
+      ("RET" "current" (lambda () (interactive) (ignore-errors (smerge-keep-current)) (smerge-repeatedly)))]
+     ["Diff"
+      ("<" "upper/base" (lambda () (interactive) (ignore-errors (smerge-diff-base-upper)) (smerge-repeatedly)))
+      ("=" "upper/lower" (lambda () (interactive) (ignore-errors (smerge-diff-upper-lower)) (smerge-repeatedly)))
+      (">" "base/lower" (lambda () (interactive) (ignore-errors (smerge-diff-base-lower)) (smerge-repeatedly)))
+      ("R" "refine" (lambda () (interactive) (ignore-errors (smerge-refine)) (smerge-repeatedly)))
+      ("E" "ediff" (lambda () (interactive) (ignore-errors (smerge-ediff)) (smerge-repeatedly)))]
+     ["Other"
+      ("c" "combine" (lambda () (interactive) (ignore-errors (smerge-combine-with-next)) (smerge-repeatedly)))
+      ("r" "resolve" (lambda () (interactive) (ignore-errors (smerge-resolve)) (smerge-repeatedly)))
+      ("k" "kill current" (lambda () (interactive) (ignore-errors (smerge-kill-current)) (smerge-repeatedly)))
+      ("q" "quit" (lambda () (interactive) (smerge-auto-leave)))]]))
+#+end_src
+
+Oh and I also want to bind this to a reasonable key.
+#+begin_src emacs-lisp
+(after! magit
+  (map! :leader
+        (:prefix-map ("g" . "git")
+         "m" 'smerge-repeatedly)))
 #+end_src
 
 *** Flycheck
